[gd_scene load_steps=22 format=3 uid="uid://d1lm052a2kmeq"]

[ext_resource type="Script" path="res://scripts/combat/CombatFinished.gd" id="1_cort1"]
[ext_resource type="Theme" uid="uid://7f715063sed8" path="res://assets/sprites/gui/panel.tres" id="2_5hj6y"]
[ext_resource type="Texture2D" uid="uid://nwrvknw3f2l4" path="res://assets/sprites/units/player/cat/cat-picture.png" id="4_fgwhu"]
[ext_resource type="Texture2D" uid="uid://dekiqrff8f80c" path="res://assets/sprites/units/player/frog/frog-picture.png" id="6_8m6ha"]
[ext_resource type="Script" path="res://scripts/menus/StatCheckBox.gd" id="7_41vfw"]
[ext_resource type="Shader" path="res://assets/shaders/color.gdshader" id="8_6fdij"]
[ext_resource type="Script" path="res://scripts/combat/ColorRect2.gd" id="9_tfqr4"]
[ext_resource type="Shader" path="res://scenes/shaders/diamond_transition.gdshader" id="12_ml5mc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_62din"]
shader = ExtResource("8_6fdij")
shader_parameter/zoom = 4.2
shader_parameter/rotate_speed = 0.2
shader_parameter/disp = Vector2(0.5, 0.5)
shader_parameter/transparent = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3w0l"]
bg_color = Color(0.0134284, 0.0567482, 0.062693, 0.466667)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4v4fb"]
bg_color = Color(0, 1, 0.666667, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="LabelSettings" id="LabelSettings_c4300"]
font_size = 10

[sub_resource type="ButtonGroup" id="ButtonGroup_xlvq8"]

[sub_resource type="LabelSettings" id="LabelSettings_5rc3c"]
font_size = 28
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 28
shadow_color = Color(0, 0, 0.164706, 0.156863)

[sub_resource type="Animation" id="Animation_w2cbs"]
resource_name = "PanelShow"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ploxi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(195.5, 142.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/HBox:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Label:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Transition:material:shader_parameter/progress")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Transition:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -1)]
}

[sub_resource type="Animation" id="Animation_a62d3"]
resource_name = "Start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(195.5, 142.5), Vector2(195.5, 142.5), Vector2(195.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/HBox:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Label:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.9, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2), Vector2(2, 2), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s4xod"]
resource_name = "Transition_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Transition:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -1)]
}

[sub_resource type="Animation" id="Animation_mqpdk"]
resource_name = "Transition_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_20sq0"]
_data = {
"PanelShow": SubResource("Animation_w2cbs"),
"RESET": SubResource("Animation_ploxi"),
"Start": SubResource("Animation_a62d3"),
"Transition_in": SubResource("Animation_s4xod"),
"Transition_out": SubResource("Animation_mqpdk")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4a17e"]
shader = ExtResource("12_ml5mc")
shader_parameter/progress = 0.0
shader_parameter/diamondPixelSize = 50.0

[node name="CombatFinished" type="Node2D"]
script = ExtResource("1_cort1")

[node name="ColorRect2" type="ColorRect" parent="."]
show_behind_parent = true
z_index = -10
material = SubResource("ShaderMaterial_62din")
offset_left = -24.0
offset_top = -24.0
offset_right = 680.0
offset_bottom = 400.0
mouse_filter = 2
script = ExtResource("9_tfqr4")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 656.0
offset_bottom = 368.0
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="HBox" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -184.0
offset_right = 328.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(328, 184)

[node name="Panel" type="Control" parent="Control/HBox"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_5hj6y")

[node name="TextureRect" type="TextureRect" parent="Control/HBox/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.391
anchor_right = 0.5
anchor_bottom = 0.391
offset_left = -80.0
offset_top = -79.888
offset_right = 72.0
offset_bottom = 72.112
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fgwhu")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/HBox/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 40.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_u3w0l")
theme_override_styles/fill = SubResource("StyleBoxFlat_4v4fb")
show_percentage = false

[node name="Label" type="Label" parent="Control/HBox/Panel"]
visible = false
layout_mode = 2
anchor_left = 0.488
anchor_top = 0.696
anchor_right = 0.488
anchor_bottom = 0.696
offset_left = -48.128
offset_top = -0.128021
offset_right = 48.872
offset_bottom = 22.872
text = "LEVELED UP!"

[node name="Panel2" type="Control" parent="Control/HBox"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_5hj6y")

[node name="TextureRect" type="TextureRect" parent="Control/HBox/Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.391
anchor_right = 0.5
anchor_bottom = 0.391
offset_left = -80.0
offset_top = -79.888
offset_right = 72.0
offset_bottom = 72.112
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fgwhu")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/HBox/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 40.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_u3w0l")
theme_override_styles/fill = SubResource("StyleBoxFlat_4v4fb")
show_percentage = false

[node name="Label" type="Label" parent="Control/HBox/Panel2"]
visible = false
layout_mode = 2
anchor_left = 0.488
anchor_top = 0.696
anchor_right = 0.488
anchor_bottom = 0.696
offset_left = -48.128
offset_top = -0.128021
offset_right = 48.872
offset_bottom = 22.872
text = "LEVELED UP!"

[node name="Panel3" type="Control" parent="Control/HBox"]
visible = false
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_5hj6y")

[node name="TextureRect" type="TextureRect" parent="Control/HBox/Panel3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.391
anchor_right = 0.5
anchor_bottom = 0.391
offset_left = -80.0
offset_top = -79.888
offset_right = 72.0
offset_bottom = 72.112
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fgwhu")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/HBox/Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 40.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_u3w0l")
theme_override_styles/fill = SubResource("StyleBoxFlat_4v4fb")
show_percentage = false

[node name="Label" type="Label" parent="Control/HBox/Panel3"]
visible = false
layout_mode = 2
anchor_left = 0.488
anchor_top = 0.696
anchor_right = 0.488
anchor_bottom = 0.696
offset_left = -48.128
offset_top = -0.128021
offset_right = 48.872
offset_bottom = 22.872
text = "LEVELED UP!"

[node name="Panel4" type="Control" parent="Control/HBox"]
visible = false
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_5hj6y")

[node name="TextureRect" type="TextureRect" parent="Control/HBox/Panel4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.391
anchor_right = 0.5
anchor_bottom = 0.391
offset_left = -80.0
offset_top = -79.888
offset_right = 72.0
offset_bottom = 72.112
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fgwhu")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/HBox/Panel4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 40.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_u3w0l")
theme_override_styles/fill = SubResource("StyleBoxFlat_4v4fb")
show_percentage = false

[node name="Label" type="Label" parent="Control/HBox/Panel4"]
visible = false
layout_mode = 2
anchor_left = 0.488
anchor_top = 0.696
anchor_right = 0.488
anchor_bottom = 0.696
offset_left = -48.128
offset_top = -0.128021
offset_right = 48.872
offset_bottom = 22.872
text = "LEVELED UP!"

[node name="Panel" type="Panel" parent="Control"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.378195
anchor_top = 0.304348
anchor_right = 0.622195
anchor_bottom = 0.630217
offset_left = -112.096
offset_top = -64.0
offset_right = 111.84
offset_bottom = 80.08
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(192, 132)
theme = ExtResource("2_5hj6y")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Control/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 120.0
offset_bottom = 120.0
texture = ExtResource("6_8m6ha")

[node name="Name" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 128.0
offset_right = 120.0
offset_bottom = 152.0
text = "Frog"
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 136.0
offset_top = 16.0
offset_right = 368.0
offset_bottom = 40.0
text = "LEVELED UP TO LEVEL 6!"
horizontal_alignment = 1
autowrap_mode = 1

[node name="MaxHealth" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 136.0
offset_top = 40.0
offset_right = 368.0
offset_bottom = 64.0
text = "MAX HEALTH UPGRADED TO 52"
label_settings = SubResource("LabelSettings_c4300")
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label4" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 136.0
offset_top = 56.0
offset_right = 368.0
offset_bottom = 80.0
text = "CHOOSE A STAT TO UPGRADE:"
label_settings = SubResource("LabelSettings_c4300")
horizontal_alignment = 1
autowrap_mode = 1

[node name="StatLabel" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 192.0
offset_right = 280.0
offset_bottom = 224.0
text = "STRENGHT: 8 -> 26"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ConfirmButton" type="Button" parent="Control/Panel"]
layout_mode = 0
offset_left = 280.0
offset_top = 192.0
offset_right = 336.0
offset_bottom = 224.0
theme = ExtResource("2_5hj6y")
text = "OK"

[node name="Buttons" type="Control" parent="Control/Panel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CheckBox" type="CheckBox" parent="Control/Panel/Buttons"]
layout_mode = 0
offset_left = 152.0
offset_top = 80.0
offset_right = 252.0
offset_bottom = 108.0
button_pressed = true
button_group = SubResource("ButtonGroup_xlvq8")
text = "STRENGTH"
script = ExtResource("7_41vfw")
stat = 6

[node name="CheckBox2" type="CheckBox" parent="Control/Panel/Buttons"]
layout_mode = 0
offset_left = 272.0
offset_top = 80.0
offset_right = 372.0
offset_bottom = 108.0
button_group = SubResource("ButtonGroup_xlvq8")
text = "SPEED"
script = ExtResource("7_41vfw")
stat = 2

[node name="CheckBox3" type="CheckBox" parent="Control/Panel/Buttons"]
layout_mode = 0
offset_left = 152.0
offset_top = 112.0
offset_right = 252.0
offset_bottom = 140.0
button_group = SubResource("ButtonGroup_xlvq8")
text = "DEFENSE"
script = ExtResource("7_41vfw")
stat = 3

[node name="CheckBox4" type="CheckBox" parent="Control/Panel/Buttons"]
layout_mode = 0
offset_left = 152.0
offset_top = 112.0
offset_right = 252.0
offset_bottom = 140.0
button_group = SubResource("ButtonGroup_xlvq8")
text = "DEFENSE"
script = ExtResource("7_41vfw")
stat = 3

[node name="CheckBox5" type="CheckBox" parent="Control/Panel/Buttons"]
layout_mode = 0
offset_left = 272.0
offset_top = 112.0
offset_right = 372.0
offset_bottom = 140.0
button_group = SubResource("ButtonGroup_xlvq8")
text = "MAGIC"
script = ExtResource("7_41vfw")
stat = 5

[node name="CheckBox6" type="CheckBox" parent="Control/Panel/Buttons"]
layout_mode = 0
offset_left = 200.0
offset_top = 144.0
offset_right = 301.0
offset_bottom = 172.0
button_group = SubResource("ButtonGroup_xlvq8")
text = "PRECISION"
script = ExtResource("7_41vfw")
stat = 4

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 195.5
offset_top = 142.5
offset_right = 460.5
offset_bottom = 225.5
grow_horizontal = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(132, 41)
size_flags_vertical = 1
text = "VICTORY!"
label_settings = SubResource("LabelSettings_5rc3c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 120.0
offset_right = 104.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5hj6y")
disabled = true
text = "CONTINUE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_20sq0")
}
autoplay = "Transition_in"

[node name="UpdateTimer" type="Timer" parent="."]
one_shot = true

[node name="Transition" type="ColorRect" parent="."]
top_level = true
material = SubResource("ShaderMaterial_4a17e")
offset_right = 664.0
offset_bottom = 376.0
scale = Vector2(-1, -1)
pivot_offset = Vector2(332, 188)
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Control/Panel/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Control/ContinueButton" to="." method="_on_continue_button_pressed"]
